# linkage_sim

./: .gitignore  ANALYSIS_MODES.md  ARCHITECTURE.md  CLAUDE.md  ENGINEERING_OUTPUTS.md  EXTENSIBILITY.md  GUI_VALIDATION_PLAYBOOK.md  NUMERICAL_FORMULATION.md  PHASE1_VALIDATION_PLAN.md  README.md  ROADMAP.md  ROADMAP_IMPLEMENTATION.md  RUST_MIGRATION.md  VALIDATION.md  pyproject.toml
.github/workflows/: deploy-web.yml
data/benchmarks/golden/: fourbar_dynamics.json  fourbar_inverse_dynamics.json  fourbar_kinematics.json  fourbar_statics.json  pendulum_dynamics.json  (+4 more)
docs/: SAMPLES.md  SHORTCUTS.md  WASM_DEPLOYMENT.md  improvements_3202026.md
linkage-sim-rs/: Cargo.toml
linkage-sim-rs/scripts/: build_web.sh  serve_web.sh
linkage-sim-rs/src/: error.rs  lib.rs
linkage-sim-rs/src/analysis/: coupler.rs  crank_selection.rs  energy.rs  envelopes.rs  force_breakdown.rs  grashof.rs  mod.rs  motor_sizing.rs  transmission.rs  validation.rs  virtual_work.rs
linkage-sim-rs/src/core/: body.rs  constraint.rs  driver.rs  mechanism.rs  mod.rs  state.rs
linkage-sim-rs/src/forces/: assembly.rs  compound.rs  elements.rs  gravity.rs  helpers.rs  mod.rs
linkage-sim-rs/src/gui/: canvas.rs  error_panel.rs  export.rs  force_toolbar.rs  input_panel.rs  mod.rs  parametric_panel.rs  plot_panel.rs  property_panel.rs  samples.rs  state.rs  sweep.rs  undo.rs
linkage-sim-rs/src/io/: serialization.rs
linkage-sim-rs/src/solver/: assembly.rs  events.rs  forward_dynamics.rs  inverse_dynamics.rs  kinematics.rs  mod.rs  statics.rs
linkage-sim-rs/tests/: golden_fixtures.rs  mount_point_integration.rs  parallelogram_actuator_sample.rs  property_tests.rs  singular_behavior.rs
linkage-sim-rs/web/: .gitignore  index.html  vercel.json
scripts/: export_gifs.py  export_golden.py  view_chebyshev.py  view_crank_rocker.py  view_double_crank.py  view_double_rocker.py  view_fourbar.py  view_parallelogram.py  view_sixbar.py  view_sixbar_A1.py  view_sixbar_A2.py  view_sixbar_B2.py  view_sixbar_B3.py  view_slider_crank.py
src/linkage_sim/: __init__.py
tests/: test_animation.py  test_benchmark_damped.py  test_benchmark_fourbar_gravity.py  test_benchmark_fourbar_spring.py  test_benchmark_inertia.py  test_benchmark_slidercrank_friction.py  test_bodies.py  test_constraints.py  test_coupler.py  test_coupler_trace.py  test_crank_selection.py  test_dampers.py  test_drivers.py  test_envelopes.py  test_external_load.py  test_failure_modes.py  test_force_helpers.py  test_force_plots.py  test_forward_dynamics.py  test_fourbar_benchmark.py  test_friction.py  test_golden_fixtures.py  test_grashof.py  test_gravity_element.py  test_interactive_viewer.py  test_invariance.py  test_inverse_dynamics.py  test_kinematics.py  test_mechanical_advantage.py  test_mechanism.py  test_motor.py  test_nonsmooth_dynamics.py  test_numerical_consistency.py  test_point_mass.py  test_prismatic.py  test_property_stress.py  test_reactions.py  test_regression_baselines.py  test_serialization.py  test_sixbar_ternary.py  (+13 more)
tests/golden/: fourbar_snapshot.json  sixbar_snapshot.json  slidercrank_snapshot.json
(+60 files in other folders)
