[package]
name = "linkage-sim-rs"
version = "0.1.0"
edition = "2024"
description = "Planar linkage mechanism simulator — Rust port of the validated Python solver"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
approx = "0.5"
proptest = "1"
