[package]
name = "linkage-sim-rs"
version = "0.1.0"
edition = "2024"
description = "Planar linkage mechanism simulator — Rust port of the validated Python solver"

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
eframe = "0.32"
egui_plot = "0.33"
log = "0.4"
env_logger = "0.11"
rfd = "0.15"
resvg = "0.44"

[dev-dependencies]
approx = "0.5"
proptest = "1"

[[bin]]
name = "linkage-gui"
path = "src/bin/linkage_gui.rs"
