[package]
name = "linkage-sim-rs"
version = "0.1.0"
edition = "2024"
description = "Planar linkage mechanism simulator — Rust port of the validated Python solver"

[features]
default = ["native"]
native = ["dep:rfd", "dep:resvg", "dep:gif"]

[dependencies]
nalgebra = { version = "0.33", features = ["serde-serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
eframe = "0.32"
egui_plot = "0.33"
log = "0.4"
env_logger = "0.11"
meval = "0.2"

# Desktop-only dependencies (behind "native" feature)
rfd = { version = "0.15", optional = true }
resvg = { version = "0.44", optional = true }
gif = { version = "0.13", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[dev-dependencies]
approx = "0.5"
proptest = "1"
meval = "0.2"

[[bin]]
name = "linkage-gui"
path = "src/bin/linkage_gui.rs"
required-features = ["native"]

[[bin]]
name = "linkage-web"
path = "src/bin/linkage_web.rs"
